refactor: :recycle: use lit-html intead of innerHTML

--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
   <body>
     <h1>Players | Ratings</h1>
     <form id="matchForm">
-      <div id="playerList">loading...</div>
+      <div id="playerList"></div>
       <!-- <button id="newPlayer" type="button">New Player</button> -->
 
       <p>
